language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_item_with_import_alias_to_original_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble.{Wibble as Wobble}\n\npub fn main() {\n  let _ = Wobble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{Wibble as Wobble}

pub fn main() {
  let _ = Wobble
          ↑▔▔▔▔▔
}


----- AFTER RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{Wibble as Wibble}

pub fn main() {
  let _ = Wibble
}
