language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_item_with_import_alias_to_original_name_with_other_items.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wibble.{type Wibble as Wobble, Wibble as Wobble}\n\npub fn main() -> Wobble {\n  Wobble\n}\n"
---
----- BEFORE RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{type Wibble as Wobble, Wibble as Wobble}

pub fn main() -> Wobble {
  Wobble
  ↑▔▔▔▔▔
}


----- AFTER RENAME
-- wibble.gleam

pub type Wibble {
  Wibble
}


-- app.gleam

import wibble.{type Wibble as Wobble, Wibble as Wibble}

pub fn main() -> Wobble {
  Wibble
}
