language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wibble\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  let wibble = 10
  wibble
  ↑▔▔▔▔▔
}


----- AFTER RENAME
-- app.gleam

pub fn main() {
  let wobble = 10
  wobble
}
