language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_argument.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn add(first_number: Int, x: Int) -> Int {\n  x + first_number\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn add(first_number: Int, x: Int) -> Int {
  x + first_number
  ↑               
}


----- AFTER RENAME
-- app.gleam

pub fn add(first_number: Int, second_number: Int) -> Int {
  second_number + first_number
}
