language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_argument_from_definition.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn wibble(wibble: Float) {\n  wibble /. 0.3\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn wibble(wibble: Float) {
              ↑▔▔▔▔▔          
  wibble /. 0.3
}


----- AFTER RENAME
-- app.gleam

pub fn wibble(wobble: Float) {
  wobble /. 0.3
}
