language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_from_definition.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = 10\n  let wobble = wibble + 1\n  wobble - wibble\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  let wibble = 10
      ↑▔▔▔▔▔     
  let wobble = wibble + 1
  wobble - wibble
}


----- AFTER RENAME
-- app.gleam

pub fn main() {
  let some_value = 10
  let wobble = some_value + 1
  wobble - some_value
}
