language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_local_variable_from_definition_nested_pattern.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  let assert Ok([_, wibble, ..]) = Error(12)\n  wibble\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  let assert Ok([_, wibble, ..]) = Error(12)
                    ↑▔▔▔▔▔                  
  wibble
}


----- AFTER RENAME
-- app.gleam

pub fn main() {
  let assert Ok([_, second_element, ..]) = Error(12)
  second_element
}
